# ipc_dm36x

./: .gitignore  Makefile  README.md  Rules.make
av_capture/application/ipnc/: MAKEFILE.MK
av_capture/application/ipnc/av_server/: MAKEFILE.MK
av_capture/application/test/: MAKEFILE.MK
av_capture/application/test/i2crw/: MAKEFILE.MK  main.c
av_capture/application/test/moduletest/: MAKEFILE.MK  main.c
av_capture/application/test/regrw/: MAKEFILE.MK  main.c
av_capture/application/test/sensorcheck/: MAKEFILE.MK  main.c
av_capture/framework/: MAKEFILE.MK
av_capture/framework/csl/: MAKEFILE.MK
av_capture/framework/drv/: MAKEFILE.MK
ipnc_app/: Makefile
ipnc_app/interface/: Makefile
ipnc_app/interface/inc/: Alarm_Msg_Def.h  ApproDrvMsg.h  Appro_interface.h  File_Msg_Def.h  Msg_Def.h  Stream_Msg_Def.h  Sys_Msg_Def.h  alarm_msg_drv.h  dm355_gio_util.h  file_msg_drv.h  ipnc_ver.h  pause.h  rendezvous.h  rszcopy.h  sem_util.h  share_mem.h  sys_env_type.h  sys_msg_drv.h  sysctrl.h  system_default.h
ipnc_app/interface/src/: ApproDrvMsg.c  Appro_interface.c  Makefile  alarm_msg_drv.c  dm355_gio_util.c  file_msg_drv.c  msg_util.c  reboot_ipnc  reboot_ipnc.c  sem_util.c  share_mem.c  sys_msg_drv.c  sysctrl.c
ipnc_app/multimedia/: Makefile
ipnc_app/multimedia/avi_save/: Appro_avi_save  Appro_avi_save.c  Makefile
ipnc_app/network/: Makefile
ipnc_app/network/ScanIP_Upnp/: Makefile  scanip  upnp-scanip  upnp-scanip.c
ipnc_app/network/boa-0.94.13/: Makefile
ipnc_app/network/dhcpcd/: Makefile  Makefile.am  Makefile.in  arp.c  autoconf.h  buildmsg.c  cache.c  client.c  client.h  configure  configure.in  dhcpcd  dhcpcd-1.3.22.lsm  dhcpcd.8  dhcpcd.c  dhcpcd.h  dhcpcd.spec  dhcpcd.spec.in  dhcpconfig.c  signals.c  signals.h  udpipgen.c
ipnc_app/network/esmtp/: Makefile  appro-mail  appro-mail.c  esmtp
ipnc_app/network/esmtp-1.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  config.h.in  configure  configure.ac  esmtp-wrapper  esmtp.1  esmtprc.5  lexer.c  lexer.l  list.h  local.c  local.h  main.c  main.h  message.c  message.h  parser.c  parser.h  parser.y  rcfile.h  rfc822.c  rfc822.h  sample.esmtprc  smtp.c  smtp.h  xmalloc.h
ipnc_app/network/libupnp-1.6.6/: Makefile  autoconfig.h  config.status  libtool
ipnc_app/network/live/: Makefile  compile.bat
ipnc_app/network/ntpclient/: Makefile  ntpclient  ntpclient.c
ipnc_app/network/quftp-1.0.7/: Changes  Makefile  Makefile.in  README  THANKS  TODO  cache_mng.h  config.status  configure  configure.in  example.quftprc  example.script  ftp.c  ftp.h  ftp_data.c  ftp_directory.c  ftp_list.c  ftp_login.c  ftp_transfer.c  jpeg.c  log.c  log.h  quftp  quftp.1  quftp.c  quftp.h  quftp.lsm  quftp.spec  rc.c  rc.h  text.c  text.h  upload
ipnc_app/network/zeroconfig/: avahi_build_steps.txt
ipnc_app/root_filesys/: Makefile
ipnc_app/root_filesys/etc/: fstab
ipnc_app/root_filesys/root/: .esmtprc
ipnc_app/sys_server/: Makefile
ipnc_app/sys_server/boot_proc/: Makefile  main.c
ipnc_app/sys_server/dev_Upgrade/: IPC程序分区.txt  Makefile~  Upgrade.c  Upgrade.dsp  Upgrade.dsw  Upgrade.opt  Upgrade.plg  dev_Upgrade.c  dev_Upgrade.h
ipnc_app/sys_server/inc/: alarm_schedule.h  av_server_ctrl.h  avi_mng.h  davinci_emac_priv.h  file_dispatcher.h  file_mng.h  gio_alarmout.h  jpg_mng.h  net_config.h  proc_alarm.h  rtsp_ctrl.h  schedule_mng.h  sd_config.h  semaphore_util.h  system_control.h
ipnc_app/sys_server/read_flash_tool/: Makefile~  dev_Upgrade.h  read_rootfs_tool.c
ipnc_app/sys_server/src/: Makefile  alarm_main.c  alarm_schedule.c  av_server_ctrl.c  avi_mng.c  checkPlatform.c  file_dispatcher.c  file_mng.c  file_mng_main.c  framerate_tables.c  jpg_mng.c  main.c  net_config.c  proc_alarm.c  rtsp_ctrl.c  schedule_mng.c  sd_config.c  semaphore_util.c  system_control.c
ipnc_app/utils/: Makefile
ipnc_app/utils/armloading/: Makefile  arm_loading  main.c
ipnc_app/utils/update/: Makefile  crc32.c  image.h  update.c  update.cgi
ipnc_app/webdata/: Makefile
ipnc_app/webdata/etc/: boa.conf  mime.types
ipnc_app/webdata/gui/: IPNCWebDlls.CAB  MaintJ.htm  copyright.txt  credits.txt  gLogon.htm  index.htm  license.txt  loadActiveX.htm  supportinfo.txt  timezoneinfo.txt
ipnc_app/webdata/util/: autorun.inf  tvdevicedesc.xml.file
(+831 files in other folders)
