dnl Process this file with autoconf to produce a configure script.
AC_INIT(quftp.c)

dnl Checks for programs.
AC_PROG_CC
dnl AC_PROG_INSTALL

dnl Checks for libraries.
AC_CHECK_LIB(ncurses, touchline)
AC_CHECK_LIB(readline, readline)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h malloc.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_FNMATCH
AC_CHECK_FUNCS(getcwd gettimeofday mkdir socket strdup strstr)

AC_OUTPUT(Makefile)
